// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`merkle trie > adding an item works 1`] = `
{
  "1": {
    "2": {
      "1": {
        "0": {
          "1": {
            "0": {
              "0": {
                "2": {
                  "0": {
                    "1": {
                      "1": {
                        "0": {
                          "2": {
                            "2": {
                              "0": {
                                "0": {
                                  "hash": 1983295247,
                                },
                                "hash": 1983295247,
                              },
                              "hash": 1983295247,
                            },
                            "hash": 1983295247,
                          },
                          "hash": 1983295247,
                        },
                        "hash": 1983295247,
                      },
                      "hash": 1983295247,
                    },
                    "hash": 1983295247,
                  },
                  "1": {
                    "0": {
                      "1": {
                        "0": {
                          "2": {
                            "0": {
                              "0": {
                                "0": {
                                  "hash": 1469038940,
                                },
                                "hash": 1469038940,
                              },
                              "hash": 1469038940,
                            },
                            "hash": 1469038940,
                          },
                          "hash": 1469038940,
                        },
                        "hash": 1469038940,
                      },
                      "hash": 1469038940,
                    },
                    "hash": 1469038940,
                  },
                  "hash": 565800531,
                },
                "hash": 565800531,
              },
              "hash": 565800531,
            },
            "hash": 565800531,
          },
          "hash": 565800531,
        },
        "hash": 565800531,
      },
      "hash": 565800531,
    },
    "hash": 565800531,
  },
  "hash": 565800531,
}
`;

exports[`merkle trie > pruning works and keeps correct hashes 1`] = `
{
  "1": {
    "2": {
      "1": {
        "0": {
          "0": {
            "2": {
              "2": {
                "2": {
                  "1": {
                    "2": {
                      "2": {
                        "0": {
                          "0": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 1000,
                                },
                                "hash": 1000,
                              },
                              "hash": 1000,
                            },
                            "2": {
                              "2": {
                                "0": {
                                  "hash": 1100,
                                },
                                "hash": 1100,
                              },
                              "hash": 1100,
                            },
                            "hash": 1956,
                          },
                          "1": {
                            "0": {
                              "2": {
                                "0": {
                                  "hash": 1200,
                                },
                                "hash": 1200,
                              },
                              "hash": 1200,
                            },
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 1300,
                                },
                                "hash": 1300,
                              },
                              "hash": 1300,
                            },
                            "2": {
                              "2": {
                                "0": {
                                  "hash": 1400,
                                },
                                "hash": 1400,
                              },
                              "hash": 1400,
                            },
                            "hash": 1244,
                          },
                          "2": {
                            "0": {
                              "2": {
                                "0": {
                                  "hash": 1500,
                                },
                                "hash": 1500,
                              },
                              "hash": 1500,
                            },
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 1600,
                                },
                                "hash": 1600,
                              },
                              "hash": 1600,
                            },
                            "2": {
                              "2": {
                                "0": {
                                  "hash": 1700,
                                },
                                "hash": 1700,
                              },
                              "hash": 1700,
                            },
                            "hash": 1336,
                          },
                          "hash": 1600,
                        },
                        "1": {
                          "0": {
                            "0": {
                              "1": {
                                "1": {
                                  "hash": 1800,
                                },
                                "hash": 1800,
                              },
                              "hash": 1800,
                            },
                            "1": {
                              "1": {
                                "1": {
                                  "hash": 1900,
                                },
                                "hash": 1900,
                              },
                              "hash": 1900,
                            },
                            "2": {
                              "1": {
                                "1": {
                                  "hash": 2000,
                                },
                                "hash": 2000,
                              },
                              "hash": 2000,
                            },
                            "hash": 1972,
                          },
                          "1": {
                            "0": {
                              "1": {
                                "1": {
                                  "hash": 2100,
                                },
                                "hash": 2100,
                              },
                              "hash": 2100,
                            },
                            "hash": 2100,
                          },
                          "hash": 3968,
                        },
                        "hash": 2496,
                      },
                      "hash": 2496,
                    },
                    "hash": 2496,
                  },
                  "hash": 2496,
                },
                "hash": 2496,
              },
              "hash": 2496,
            },
            "hash": 2496,
          },
          "hash": 2496,
        },
        "hash": 2496,
      },
      "hash": 2496,
    },
    "hash": 2496,
  },
  "hash": 2496,
}
`;

exports[`merkle trie > pruning works and keeps correct hashes 2`] = `
{
  "1": {
    "2": {
      "1": {
        "0": {
          "0": {
            "2": {
              "2": {
                "2": {
                  "1": {
                    "2": {
                      "2": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 1300,
                                },
                                "hash": 1300,
                              },
                              "hash": 1300,
                            },
                            "2": {
                              "2": {
                                "0": {
                                  "hash": 1400,
                                },
                                "hash": 1400,
                              },
                              "hash": 1400,
                            },
                            "hash": 1244,
                          },
                          "2": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 1600,
                                },
                                "hash": 1600,
                              },
                              "hash": 1600,
                            },
                            "2": {
                              "2": {
                                "0": {
                                  "hash": 1700,
                                },
                                "hash": 1700,
                              },
                              "hash": 1700,
                            },
                            "hash": 1336,
                          },
                          "hash": 1600,
                        },
                        "1": {
                          "0": {
                            "1": {
                              "1": {
                                "1": {
                                  "hash": 1900,
                                },
                                "hash": 1900,
                              },
                              "hash": 1900,
                            },
                            "2": {
                              "1": {
                                "1": {
                                  "hash": 2000,
                                },
                                "hash": 2000,
                              },
                              "hash": 2000,
                            },
                            "hash": 1972,
                          },
                          "1": {
                            "0": {
                              "1": {
                                "1": {
                                  "hash": 2100,
                                },
                                "hash": 2100,
                              },
                              "hash": 2100,
                            },
                            "hash": 2100,
                          },
                          "hash": 3968,
                        },
                        "hash": 2496,
                      },
                      "hash": 2496,
                    },
                    "hash": 2496,
                  },
                  "hash": 2496,
                },
                "hash": 2496,
              },
              "hash": 2496,
            },
            "hash": 2496,
          },
          "hash": 2496,
        },
        "hash": 2496,
      },
      "hash": 2496,
    },
    "hash": 2496,
  },
  "hash": 2496,
}
`;
